--- a/ebsi-access-control/src/index.css
+++ b/ebsi-access-control/src/index.css
@@ -4,14 +4,19 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #1f1f1fde;
+  background-color: #ffffff;
+  margin: 0px auto;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
 }
 
 a {
