--- a/ebsi-access-control/src/components/HeaderPaper/AccountSection/AccountSection.module.css
+++ b/ebsi-access-control/src/components/HeaderPaper/AccountSection/AccountSection.module.css
@@ -8,20 +8,22 @@
 }
 
 .logoutButton {
-  /* max-width: 200px; */
+  max-width: 500px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  justify-content: flex-start !important;
   padding: 10px 20px!important;
   border: 1px solid rgba(0, 0, 0, 0.20)!important;
   border-radius: 5px;
 }
 
 .logoutButtonOpened {
-  /* max-width: 200px; */
+  max-width: 500px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  justify-content: flex-start !important;
   text-align: left;
   padding: 10px 20px!important;
   border-color: rgba(0, 0, 0, 0.20)!important;
