--- a/ebsi-access-control/src/components/UsersView/UsersView.module.css
+++ b/ebsi-access-control/src/components/UsersView/UsersView.module.css
@@ -11,13 +11,17 @@
 }
 
 .chipsContainerCell {
-  width: 150px;
-  justify-content: end !important;
+  width: 200px;
+}
+
+.chipsContainerStack {
+  justify-content: flex-end !important;
 }
 
 .modalTitle, .importantMessage, .addItem, .pemKeyFormatErrorAlert, .textInput {
-  margin-bottom: 20px!important;
+  margin-bottom: 20px !important;
 }
+
 .privateKeyContainer {
   margin: 30px 0px;
 }
